Implement PLY mesh export

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Streamline</title>
 <script src="/jspm_packages/system.js"></script>
 <script src="/node_modules/typescript/lib/typescript.js"></script>
+<script src="/node_modules/file-saver/FileSaver.min.js"></script>
 <script src="config.js"></script>
 <script src="/lib/dat.gui.min.js"></script>
 <script>
