Fix scaling/stretching bug

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@ System
 <!--<link href="http://mdc.io/css/dat.gui.mod.css" rel="stylesheet" type="text/css">-->
 <style>
     body { margin: 0; }
-    canvas { display: block; }
+    canvas {
+        display: block;
+        flex: none;
+        align-self: flex-start;
+    }
     .flowviz {
         position: relative;
         display: flex;
